# naru

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release-binaries.yml
src/: archive.rs  create.rs  extract.rs  format.rs  input.rs  io.rs  list.rs  main.rs  output.rs  paths.rs
src/archive/: mod.rs  read.rs  write.rs
src/archive/formats/: ar.rs  cab.rs  cpio.rs  fat.rs  mod.rs  tar.rs  zip.rs
src/compress/: mod.rs
src/compress/formats/: bzip2.rs  compress.rs  gzip.rs  lzip.rs  mod.rs  xz.rs  zlib.rs
src/formats/: ar.rs  mod.rs  tar.rs  zip.rs
src/io/: buffers.rs  input.rs  mod.rs  output.rs
src/util/: maybe_boxed.rs  mod.rs
