[package]
name = "aru"
version = "0.1.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
edition = "2018"

[dependencies]
ar = "0.8"
cab = "0.2"
chrono = "0.4"
cpio = "0.2"
fatfs = "0.3"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.14"
infer = "0.1"
mpq = "0.7"
owning_ref = "0.4"
size = "0.1"
structopt = "0.3"
tar = "0.4"
unrar = "0.4"
xz2 = "0.1.6"
zip = "0.5"
