[package]
name = "naru"
version = "0.1.0"
description = "Cross platform, intuitive file archiver command."
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"
keywords = ["archive", "zip"]
categories = ["command-line-utilities"]
repository = "https://github.com/sagebind/naru"
readme = "README.md"
edition = "2018"

[dependencies]
ar = "0.8"
bzip2 = "0.3"
cab = "0.2"
chrono = "0.4"
cpio = "0.2"
crc32fast = "1.2"
fatfs = "0.3"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.14"
infer = "0.1"
log = "0.4"
lzw = "0.10"
mpq = "0.7"
owning_ref = "0.4"
size = "0.1"
stderrlog = "0.4"
structopt = "0.3"
tar = "0.4"
tempfile = "3.1"
unrar = "0.4"
walkdir = "2.3"
xz2 = "0.1.6"
zip = "0.5"
